--- a/css/style.css
+++ b/css/style.css
@@ -188,5 +188,14 @@ button:hover {
 .features .card:nth-child(3) {
     animation-delay: 0.6s;
 }
+.intro-text {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    color: var(--dark-text);
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+}
+.features {
+    margin-top: 2rem;
+}
 
 
